--- a/FacturacionElectronica/Views/Cliente/Crear.cshtml
+++ b/FacturacionElectronica/Views/Cliente/Crear.cshtml
@@ -6,6 +6,7 @@
 <h1>
 Clientes nuevos
 </h1>
+<h5 style="color: darkred" >El documento ingresado no está registrado</h5>
 <div asp-validation-summary="ModelOnly"></div>
 <form asp-action="Crear">
     <div class="mb-3">
