--- a/FacturacionElectronica/Views/Pagos/Crear.cshtml
+++ b/FacturacionElectronica/Views/Pagos/Crear.cshtml
@@ -52,7 +52,7 @@
     </div>
 
     <button type="submit" class="btn btn-success">Enviar</button>
-    <a class="btn btn-secondary" asp-action="Index" >Cancelar</a>
+    <a class="btn btn-secondary" asp-action="Crear" >Cancelar</a>
 </form>
 
 @section Scripts {
