--- a/FacturacionElectronica/Views/Pagos/Crear.cshtml
+++ b/FacturacionElectronica/Views/Pagos/Crear.cshtml
@@ -24,6 +24,13 @@
         <select asp-for="Prefijo" class="form-select" name="Prefijo"></select>
         <span asp-validation-for="Prefijo" class="text-danger"></span>
     </div>
+
+    <div class="mb-3">
+        <label asp-for="FechaPago" class="form-label"></label>
+        <input asp-for="FechaPago" class="form-control" type="date" name="FechaPago" />
+        <span asp-validation-for="FechaPago" class="text-danger"></span>
+    </div>
+
     <div class="mb-3">
         <label asp-for="NumeroFactura" class="form-label"></label>
         <input type="text" id="NumeroFactura" asp-for="NumeroFactura" autocomplete="off" class="form-control" onblur="onBlurTxtTotal()" />
