--- a/FacturacionElectronica/Views/Home/NoEncontrado.cshtml
+++ b/FacturacionElectronica/Views/Home/NoEncontrado.cshtml
@@ -28,7 +28,7 @@
     </style>
 </head>
 <body>
-<h1>El recurso solicitado no ha sido encontrado</h1>
+<h1>Algún dato faltó por ingresar, o no es correcto</h1>
 <a asp-action="Index" asp-controller="Pagos">Click aquí para regresar</a>
 </body>
 </html>
