Antes del Email

--- a/FacturacionElectronica/Views/Pagos/Index.cshtml
+++ b/FacturacionElectronica/Views/Pagos/Index.cshtml
@@ -28,7 +28,7 @@
         <div class="texto-encabezado">
             <div class="container">
                 <h1 class="display-4 wow bounceIn">Solicitud Facturación Electrónica</h1>
-                <p class="wow bounceIn" data-wow-delay=".3s">Por medio de esta página podrá solicitar la factura electrónica</p>
+                @*<p class="wow bounceIn" data-wow-delay=".3s">Por medio de esta página podrá solicitar la factura electrónica</p>*@
                 <a class="btn btn-primary btn-lg" asp-controller="Pagos" asp-action="Crear">¡Solicitar ahora!</a>
             </div>
         </div>
