--- a/FacturacionElectronica/Views/Home/FechaNoValida.cshtml
+++ b/FacturacionElectronica/Views/Home/FechaNoValida.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "No existe";
+    ViewData["Title"] = "Fecha no válida";
 }
 <!DOCTYPE html>
 <html>
@@ -28,7 +28,7 @@
     </style>
 </head>
 <body>
-    <h1>Los datos ingresados no existen en la base de datos</h1>
-    <a href="/Pagos/Crear">Click aquí para regresar</a>
+    <h1>Fecha de la fáctura no valida</h1>
+    <a href="/Pagos/Crear">Solicitar nueva fáctura</a>
 </body>
 </html>
