--- a/FacturacionElectronica/Views/Home/ClienteProceso.cshtml
+++ b/FacturacionElectronica/Views/Home/ClienteProceso.cshtml
@@ -28,8 +28,8 @@
     </style>
 </head>
 <body>
-    <h1>En este momento el cliente se encuentra en proceso de registro, se notificará por medio de correo
-Para que solicite su factura por este mismo medio
+    <h1>
+        ¡Registro completado! Próximamente recibirás un correo para solicitar su factura por este mismo medio.
     </h1>
     <a href="/Pagos/Index">Volver</a>
 </body>
