--- a/FacturacionElectronica/Views/Home/Enviada.cshtml
+++ b/FacturacionElectronica/Views/Home/Enviada.cshtml
@@ -28,7 +28,7 @@
     </style>
 </head>
 <body>
-    <h1>Fáctura enviada correctamente</h1>
+    <h1>Factura enviada correctamente</h1>
     <a href="/Pagos/Index">Volver</a>
 </body>
 </html>
