--- a/FacturacionElectronica/Views/Home/FechaNoValida.cshtml
+++ b/FacturacionElectronica/Views/Home/FechaNoValida.cshtml
@@ -28,7 +28,7 @@
     </style>
 </head>
 <body>
-    <h1>Fecha de la fáctura no valida</h1>
-    <a href="/Pagos/Crear">Solicitar nueva fáctura</a>
+    <h1>Fecha de la factura no válida</h1>
+    <a href="/Pagos/Crear">Solicitar nueva factura</a>
 </body>
 </html>
