--- a/FacturacionElectronica/Views/Home/YaExisteFactura.cshtml
+++ b/FacturacionElectronica/Views/Home/YaExisteFactura.cshtml
@@ -28,7 +28,7 @@
     </style>
 </head>
 <body>
-    <h1>Esta factúra ya fué solicitada</h1>
+    <h1>Esta factura ya fue solicitada</h1>
     <a href="/Pagos/Crear">Click aquí para regresar</a>
 </body>
 </html>
