--- a/FacturacionElectronica/Views/Home/FechaNoValida.cshtml
+++ b/FacturacionElectronica/Views/Home/FechaNoValida.cshtml
@@ -30,7 +30,7 @@
 </head>
 <body>
     
-    <h1> La fecha @Model.ToString("yyyy-MM-dd") de la solicitud no es válida.</h1>
+    <h1> Fecha no válida @Model.ToString("yyyy-MM-dd")</h1>
     <a href="/Pagos/Crear">Solicitar nueva factura</a>
 </body>
 </html>
